--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
-  <a class="navbar-brand" href="#">My Website</a>
+  <a class="navbar-brand" href="#">Doggos4Sale</a>
 </nav>
 
 <div class="container content"> <!-- Added 'content' class for margin-top -->
