--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doggos4Sale</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your custom CSS file -->
     <style>
         /* Custom CSS for adjusting carousel arrows and image size */
         .carousel-control-prev, .carousel-control-next {
@@ -78,11 +78,13 @@
 <div class="container mt-4 mb-4 main-content"> <!-- Added main-content class for styling -->
   <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
-      {% for image in images %}
-        <div class="carousel-item {% if loop.first %} active {% endif %}">
-          <img class="d-block w-100" src="{{ url_for('static', filename=image) }}" alt="Slide">
-        </div>
-      {% endfor %}
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="static/image000000 (2).JPG" alt="Slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="static/image000000 (3).JPG" alt="Slide">
+      </div>
+      <!-- Add more carousel items for other images -->
     </div>
     <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -106,3 +108,4 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
+
